--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,19 @@
-Hello world
+<!DOCTYPE HTML>
+<html lang="en">
+   <head>
+       <title>'The order of the burger'</title>
+       <meta charset="utf-8"/>
+   </head>
+   <body>
+    <h1> 
+        Välkommen till BurgerOnline
+    </h1>
+    <h2>
+        Menu
+    </h2>
+    <h2> 
+        Order
+    </h2>
+
+   </body>
+</html>
