--- a/public/index.html
+++ b/public/index.html
@@ -5,15 +5,29 @@
        <meta charset="utf-8"/>
    </head>
    <body>
-    <h1> 
+    <header>
+        <h1>
+            Burgers Online
+        </h1>
+    </header>
+    <main>
+    <h2> 
         Välkommen till BurgerOnline
-    </h1>
+    </h2>
+    <section>
     <h2>
         Menu
     </h2>
+    </section>
+    <section>
     <h2> 
         Order
     </h2>
-
+    </section>
+    </main> 
+    <footer>
+        <hr>
+        <code> Copyright procteced (footer) </code>
+    </footer>
    </body>
 </html>
