--- a/public/index.html
+++ b/public/index.html
@@ -7,18 +7,26 @@
    <body>
     <header>
         <h1>
-            Burgers Online
+            Welcome to Burgers Online
         </h1>
     </header>
     <main>
-    <h2> 
-        Välkommen till BurgerOnline
-    </h2>
+    <section>
+        <h2>
+            Select your burger
+        </h2>
+        ###insert options and so forth
+    </section>
     <section>
     <h2>
         Menu
     </h2>
+    ###This is where the burgers go
     </section>
+    <h3> 
+        BBQ burger
+    </h3>
+    ##This is a burgir
     <section>
     <h2> 
         Order
