--- a/public/index.html
+++ b/public/index.html
@@ -101,8 +101,29 @@
             <option> Klarna</option>
         </select>
     </p>
-
+    <form>
+        <h3>
+            Gender:
+        </h3>
+        <label>
+            <input type="radio" name="gender" value="male">
+            Male
+        </label><br>
+        <label>
+            <input type="radio" name="gender" value="female">
+            Female
+        </label><br>
+        <label>
+            <input type="radio" name="gender" value="other" checked>
+            Other
+        </label>
+    </form>
     </section>
+
+    <button type="submit">
+        <img src="https://www.pngfind.com/pngs/m/74-749231_png-file-svg-send-message-icon-png-transparent.png" style="width: 15px;">
+        Send Order
+    </button>
     </main> 
     <footer>
         <hr>
