början på classer

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en">
    <head>
+    <link rel="stylesheet" type="text/css" href="style.css">
        <title>'The order of the burger'</title>
        <meta charset="utf-8"/>
    </head>
@@ -32,16 +33,18 @@
     <h4>
         Contains:
     </h4>
+    <section class="allgergies">
     <ul>
         <li> Gluten </li>
         <li> Lactose </li>
         <li> A lot of fat </li>
-    </ul>      
+    </ul>  
+    </section>    
     </div>
 
     <div style="display: inline-block">
         <h3> 
-            Double cheese Burger
+            Meat Lover
         </h3>
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQNfbgZdQMbfIP2v7MWpYKDn2kMIUsVzlw8rg&usqp=CAU" alt="Span" title="Burger2" style="width: 200px;">
         <br> 
@@ -49,9 +52,9 @@
             Contains:
         </h4>
         <ul>
-            <li> Gluten </li>
-            <li> Lactose </li>
-            <li> A lot of fat </li>
+            <li> Meat </li>
+            <li> Chicken  </li>
+            <li> Bacon </li>
         </ul>      
         </div>
 
@@ -66,7 +69,7 @@
             </h4>
             <ul>
                 <li> Leafs </li>
-                <li> Rabbit food  </li>
+                <li> 0 Calories  </li>
                 <li> Parts of heaven </li>
             </ul>      
             </div>
@@ -124,6 +127,7 @@
         <img src="https://www.pngfind.com/pngs/m/74-749231_png-file-svg-send-message-icon-png-transparent.png" style="width: 15px;">
         Send Order
     </button>
+    
     </main> 
     <footer>
         <hr>
