added classes and ids

--- a/public/index.html
+++ b/public/index.html
@@ -33,13 +33,13 @@
     <h4>
         Contains:
     </h4>
-    <section class="allgergies">
+    <section class="allergies">
     <ul>
-        <li> Gluten </li>
-        <li> Lactose </li>
+        <li> <span id="gluten">Gluten </span> </li>
+        <li> <span id="lactose">Lactose </span> </li>
         <li> A lot of fat </li>
     </ul>  
-    </section>    
+    </section> 
     </div>
 
     <div style="display: inline-block">
@@ -51,11 +51,13 @@
         <h4>
             Contains:
         </h4>
+        <section class="allergies">
         <ul>
             <li> Meat </li>
             <li> Chicken  </li>
             <li> Bacon </li>
-        </ul>      
+        </ul>   
+        </section>   
         </div>
 
         <div style="display: inline-block">
@@ -67,11 +69,13 @@
             <h4>
                 Contains:
             </h4>
+            <section class="allergies">
             <ul>
+                <li> <span id="gluten">Gluten </span></li>
                 <li> Leafs </li>
-                <li> 0 Calories  </li>
-                <li> Parts of heaven </li>
+                <li> 0 Kcal  </li>
             </ul>      
+            </section>
             </div>
     </section>
 
