Json lab 4, punkt 3

--- a/public/index-noscript.html
+++ b/public/index-noscript.html
@@ -23,7 +23,7 @@
             Menu
         </h2>
         <div class="wrapper">
-        <div class="item">
+    <div class="box c">
     <h3> 
         BBQ Burger
     </h3>
@@ -39,7 +39,7 @@
     </ul>  
     </div>
 
-    <div class="item">
+    <div class="box b">
         <h3> 
             Meat Lover
         </h3>
@@ -55,7 +55,7 @@
         </ul>   
         </div>
 
-        <div class="item">
+        <div class="box c">
             <h3> 
                 Vegan heaven
             </h3>
